correction de l'overlapping du menu

--- a/functions/public/css/style.css
+++ b/functions/public/css/style.css
@@ -23,7 +23,8 @@ nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    min-height: 8vh;
+    min-height: 50px;
+    height: 8vh;
     background-color: #1d1d1d; 
     font-family: 'Poppins', sans-serif;
 }
@@ -89,7 +90,6 @@ nav {
 }
 
 
-
 @media screen and (max-width: 900px) {
 
     .logo {
@@ -99,7 +99,6 @@ nav {
     .nav-links{
         margin-left: 0;
         position: absolute;
-        z-index: 1;
         left: 0px;
         height: 92vh;
         top: 8vh;
@@ -110,6 +109,13 @@ nav {
         width: 70%;
         transform: translateX(-100%);
         transition: transform 0.2s ease-in
+    }
+
+    @media screen and (max-height: 630px) {
+        .nav-links{
+            height: calc(100vh - 50px);
+            top : 49px;
+        }
     }
 
     .nav-links li {
